# pysilicon

./: .binary.py.swo  .binary.py.swp  .essentials.py.swp  .scan_driver.py.swo  .scan_driver.py.swp  LICENSE  README.md  binary.py  clkgen_driver.py  config.py  equipment_control.py  essentials.py  golden_models.py  remote_tester.py  scan_driver.py  setup.cfg  upload.sh
projects/i22j_test/: .power_control.py.swp  .sample_script.py.swp  osc_params  power_control.py  run_test_notebook.ipynb  sample_script.py
projects/i22j_test/.ipynb_checkpoints/: run_test_notebook-checkpoint.ipynb
pysilicon/: binary.py  clkgen_driver.py  config.py  equipment_control.py  essentials.py  golden_models.py  remote_tester.py  scan_driver.py  utils.py  visa_driver.py
pysilicon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pysilicon/.ipynb_checkpoints/: binary-checkpoint.py  scan_driver-checkpoint.py
