[metadata]
name = pysilicon
version = 0.0.15
author = Oguz Atli
author_email = aoguzatli@gmail.com
description = A package with useful Python scripts for IC design and verification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aoguzatli/pysilicon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
